<resources>
    <string name="app_name">支付</string>
    <string name="app_title">支付</string>

    <!--对话框提示-->
    <string name="dialog_hint">提示</string>
    <string name="equipment_failure">设备验证失败</string>

    <!--按钮的确定和取消-->
    <string name="sure">确定</string>
    <string name="cancel">取消</string>

    <!--完善资料-->
    <string name="prompt_perfect_hint">该账号未完善资料，暂不可交易，是否现在完善资料</string>
    <string name="prompt_perfect">完善信息</string>
    <string name="binding_equipment">绑定设备</string>
    <string name="wait">稍后</string>

    <!--设备验证-->
    <string name="equipment_confirm_failure">设备验证失败</string>
    <!--输入手机号-->
    <string name="input_phone_number">请输入手机号</string>
    <string name="sign_in">签到中...</string>

    <!--登陆界面-->
    <string name="login_in">登   录</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="get_code">   获取验证码   </string>
    <string name="auto_sign_in">连接自动签到</string>
    <string name="equipment">设备</string>
    <string name="click_equipment">点击连接设备</string>
    <string name="bottom_text">钱宝移动支付    客服热线（400-918-1815）</string>

    <!--蓝牙弹出界面-->
    <string name="select_equipment">选择连接设备</string>
    <!--商户信息-->
    <string name="business_info_title">身份信息</string>
    <string name="id_name">姓           名：</string>
    <string name="id_name_hint">请输入您的姓名</string>
    <string name="phone_number">手    机   号：</string>
    <string name="input_your_phone_number_hint">请输入您的手机号码</string>
    <string name="id">身    份   证：</string>
    <string name="id_hint">请输入您的身份证号</string>
    <string name="id_location">身份证地区：</string>
    <string name="id_location_hint">请选择身份证所在地区</string>
    <string name="business_name">商户名称：</string>
    <string name="business_name_hint">请输入商户名称</string>
    <string name="business_name_simple">商户简称：</string>
    <string name="business_name_simple_hint">请输入商户简称</string>
    <string name="register_merchant_users">注册为商户用户（需提供营业执照）</string>
    <string name="next_step">下一步</string>

    <!--设备和手机绑定-->
    <string name="count_bind">账号绑定</string>
    <string name="equipment_number">设备号：</string>
    <string name="equipment_hint">请选择设备</string>
    <string name="phone_num">手机号：</string>
    <string name="phone_num_hint">请输入手机号</string>
    <string name="verification_code">验证码：</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="get_verification_code">  获取验证码  </string>
    <string name="use_hint">绑定后，可使用手机号或设备登录</string>
    <string name="confirm_bind">确认绑定</string>
    <string name="change_phone_number">更换手机号</string>

    <!--主页面-->
    <string name="mobile_payment">移动支付</string>
    <string name="quick_in">码上到</string>
    <string name="quick_payment">快捷支付</string>
    <string name="card_payment">刷卡支付</string>
    <string name="sweep_card">扫码支付</string>
    <!--每个图片中的子项中小布局加载之前-->
    <string name="real_name_authentication">实名认证</string>
    <!--添加银行卡，银行卡实名认证-->
    <string name="bank_card">银行卡</string>
    <string name="card_number">卡 号：</string>
    <string name="card_number_hint">请输入卡号</string>
    <string name="card_type">类 型：</string>
    <string name="card_type_hint">请选择银行卡类型</string>
    <string name="bank">银 行：</string>
    <string name="bank_hint">请选择银行</string>
    <string name="location">地 区：</string>
    <string name="location_hint">请选择地区</string>
    <string name="bank_branch">支 行：</string>
    <string name="bank_branch_hint">请选择支行</string>
    <string name="tel_phone">手 机：</string>
    <string name="tel_phone_hint">请输入手机号</string>
    <string name="bank_card_bind">绑定银行卡</string>

    <string name="bank_card_listview_title">选择银行卡</string>
    <string name="bank_card_listview_add">添加</string>
    <string name="bank_card_listview_search">点击搜索</string>

    <!--手动添加分行和分行行号-->
    <string name="add_by_hand">手动添加</string>
    <string name="add">添加</string>
    <string name="hint">提示：</string>
    <string name="important_hint">支行行号可打电话询问开户支行</string>
    <string name="branch_bank_name">支行名称:</string>
    <string name="branch_bank_name_hint">请输入支行名！</string>
    <string name="branch_bank_number">支行行号:</string>
    <string name="branch_bank_number_hint">请输入支行行号!</string>

    <!--手动添加的支行-->
    <string name="branch_bank_name_two">支行名称</string>

    <string name="action_settings">Setting</string>

    <!--银行卡还款-->
    <string name="bank_card_view_credit_card_reimbursement">为此银行卡还款</string>
    <string name="bank_card_view_credit_card_quick_pay">为此银行卡添加快捷支付</string>
    <string name="bank_card_view_reimbursement">还款</string>

    <!--选择欲还款银行卡-->
    <string name="add_bank_card">添加</string>

    <!--申请信用卡-->
    <string name="apply_credit_card">信用卡申请</string>
    <string name="chose_bank_of_apply_credit_card">选择申请信用卡银行</string>
    <string name="xingye_bank">兴业银行</string>
    <string name="communications_bank">交通银行</string>

    <!--网页布局-->
    <string name="limit">限额</string>
    <string name="back_out">后退</string>
    <string name="move_on">前进</string>
    <string name="refresh">刷新</string>
    <string name="stop">暂停</string>

    <!--还款金额-->
    <string name="repay_money">还款</string>
    <string name="tail_number">尾号 8416</string>
    <string name="debit_card">借记卡</string>
    <string name="out_money">出账金额</string>
    <string name="out_money_hint">请输入出账金额</string>
    <string name="int_money">入账金额</string>
    <string name="int_money_hint">入账金额</string>
    <string name="int_money_hint_detail">入账金额以实际到账金额为准</string>
    <string name="Immediate_transaction">立即交易</string>

    <!--更换手机号绑定-->
    <string name="equipment_number_change">设备号：</string>
    <string name="choose_equipment_hint">请选择设备</string>




</resources>
