<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--可输入的弹窗布局-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/dialog_circular"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/dialog_hint"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/prompt_content_et"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:background="@null"
            android:hint="@string/input_phone_number"
            android:textSize="17sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#eeeeee"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/cancel"
                android:textColor="#1696e2" />

            <LinearLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="#eeeeee"
                android:orientation="vertical" >
            </LinearLayout>

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/sure"
                android:textColor="#1696e2" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>