<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_background">

    <!--添加银行卡实名认证-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#1696e2"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:onClick="CertificationOnClick"
            android:src="@mipmap/break1" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/bank_card"
            android:textColor="#ffffff"
            android:textSize="20sp" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_number"
                    android:textSize="17sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/card_number_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:hint="@string/card_number_hint"
                        android:inputType="number"
                        android:textSize="17sp" />

                    <ImageView
                        android:id="@+id/card_number_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="3dp"
                        android:src="@mipmap/btn_input2x"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>

            <TextView style="@style/dividerStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/card_type"
                    android:textSize="17sp" />

                <LinearLayout
                    android:id="@+id/card_type_ll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/card_type_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:hint="@string/card_type_hint"
                        android:onClick="CertificationOnClick"
                        android:textSize="17sp" />
                </LinearLayout>
            </LinearLayout>

            <TextView style="@style/dividerStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bank"
                    android:textSize="17sp" />

                <RelativeLayout
                    android:id="@+id/select_bank_ll"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/select_bank_card_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:hint="@string/bank_hint"
                        android:onClick="CertificationOnClick"
                        android:textSize="17sp" />
                </RelativeLayout>
            </LinearLayout>

            <TextView style="@style/dividerStyle" />

            <LinearLayout
                android:id="@+id/select_region_ll"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="17sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/select_region_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:hint="@string/location_hint"
                        android:onClick="CertificationOnClick"
                        android:textSize="17sp" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/branch_ll"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="vertical" >

                <TextView style="@style/dividerStyle" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bank_branch"
                        android:textSize="17sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/branch_name_et"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:background="@null"
                            android:hint="@string/bank_branch_hint"
                            android:onClick="CertificationOnClick"
                            android:textSize="17sp" >

                            <requestFocus />
                        </EditText>
                    </LinearLayout>
                </LinearLayout>

                <TextView style="@style/dividerStyle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tel_phone"
                    android:textSize="17sp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/branch_phone_et"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:background="@null"
                        android:hint="@string/tel_phone_hint"
                        android:inputType="number"
                        android:onClick="CertificationOnClick"
                        android:textSize="17sp" />

                    <ImageView
                        android:id="@+id/branch_phone_iv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginBottom="3dp"
                        android:layout_marginTop="3dp"
                        android:src="@mipmap/btn_input2x"
                        android:visibility="gone" />
                </RelativeLayout>
            </LinearLayout>

            <TextView style="@style/dividerStyle" />

            <Button
                android:id="@+id/submit_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/blue_btn"
                android:onClick="CertificationOnClick"
                android:text="@string/bank_card_bind"
                android:textColor="#ffffff" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>